<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_translate"
        android:enabled="true"
        android:icon="@drawable/translate_icon"
        android:title="@string/text_translate"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favourites"
        android:enabled="true"
        android:icon="@drawable/default_favourites_icon"
        android:title="@string/text_favourites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/history_icon"
        android:title="@string/text_history"
        app:showAsAction="ifRoom" />
</menu>